Fixes logo overflow on smaller screen sizes

--- a/src/less/_about.less
+++ b/src/less/_about.less
@@ -220,3 +220,14 @@ img {
 #video-play-overlay > a:hover {
   color: white;
 }
+
+@media (max-width: 600px) {
+  .header-logo {
+    width: 130px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 100px;
+    margin-top: 100px;
+  }
+}
